# Tax-Trail

./: .gitignore  FLOW.md  README.md  index.html  package-lock.json  package.json
handoffs/: PHASE_00_CLAUDE_HANDOFF.md  PHASE_01_CLAUDE_HANDOFF.md
markdown/: ARCHITECTURE.md  DATA_MODEL.md  PHASE_LOG.md  PRODUCT_UX_VISION.md  PRODUCT_VISION.md  SECURITY_AND_PRIVACY.md  TAX_CATEGORIES.md
prompts/: PHASE_00_DOCUMENTATION_FOUNDATION.md  PHASE_01_APP_SHELL.md  PHASE_02_EXPENSES.md  PHASE_03_RECEIPTS.md  PHASE_04_DASHBOARD.md  PHASE_05_REPORTS_EXPORTS.md  PHASE_06_BACKUP_HARDENING.md  PHASE_07_RELEASE_PIPELINE.md  PHASE_08_POST_MVP.md
reviews/: PHASE_00_CLAUDE_REVIEW.md  PHASE_01_CLAUDE_REVIEW.md
src/: App.tsx  styles.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_app_shell.sql
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs  paths.rs  repositories.rs  services.rs
