[package]
name = "tax-trail"
version = "0.1.0"
description = "A local-first desktop app for small business expense and tax tracking."
authors = ["Tax Trail"]
edition = "2021"

[lib]
name = "tax_trail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
dirs = "6.0"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.2.0", features = [] }
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }
